<resources>
    <string name="app_name">SchoolDiary</string>
    <string name="login_button">Войти</string>
    <string name="schedule_title"> Расписание</string>
    <string name="statistic_title">Статистика</string>
    <string name="profile_title">Профиль</string>
    <string name="exit">Выход</string>
    <string name="homework">Домашнее задание:</string>

    <!-- Дни недели -->
    <string name="Monday">Понедельник</string>
    <string name="Tuesday">Вторник</string>
    <string name="Wednesday">Среда</string>
    <string name="Thursday">Четверг</string>
    <string name="Friday">Пятница</string>
    <string name="Saturday">Суббота</string>
    <string name="Sunday">Воскресенье</string>

    <!-- Zavuch schedule Fragment -->
    <string name="Plus">+</string>
    <string name="Schedule">Расписание</string>
    <string name="Class_C">Класс</string>
    <string name="item1">8А</string>
    <string name="item2">8Б</string>
    <string name="item3">10А</string>

    <string name="Lesson_Schedule_Z">1. Русский язык</string>
    <string name="Time_Schudule_Z">8:00-8:45</string>
    <string name="Name_Schudule_Z">Смирнова Татья Игоревна</string>
    <string name="Office_Schudule_Z">927к</string>

    <!-- Zavuch statistic Fragment -->
    <string name="Account">Аккаунты</string>
    <string name="Teacher_Statistic">Учитель</string>
    <string name="Student_Statistic">Учащийся</string>

    <string name="Name_Statistic1">Волкова Ольга Петровна</string>
    <string name="Name_Statistic2">Черепанов Юрий Андреевич</string>
    <string name="Class_Statistic1">4Б</string>
    <string name="Class_Statistic2">4Б</string>

    <!-- Bottom_sheet2 -->
    <string name="Account_name">Владислав Эгегей Эгейвич</string>
    <string name="Account_role">Учитель</string>
    <string name="Account_login">uchilka228</string>
    <string name="Account_password">****</string>
    <string name="Account_email">uchilka@mail.ru</string>

    <!-- edit and add account -->
    <string name="Add_account">Добавление аккаута</string>
    <string name="Edit_account">Изменение аккаута</string>
    <string name="FIO">Фамилия Имя Отчество</string>
    <string name="CClass">Класс</string>
    <string name="Button_save">Сохранить</string>

    <!-- Profile Fragment так-же используются в edit and add account -->
    <string name="Info">Информация</string>
    <string name="RRole">Роль:</string>
    <string name="EEmail">E-mail:</string>
    <string name="CCLass">Класс:</string>

    <!-- Name for Bottom_sheet2 -->
    <string name="PPasword">Пароль:</string>
    <string name="LLogin">Логин:</string>

    <!-- Profile Fragment Изменяемые поля -->
    <string name="UserName"> </string>
    <string name="Role"> </string>
    <string name="Email"> </string>
    <string name="Class"> </string>

    <!-- Zavuch Profile Fragment -->
    <string name="C_Role">Роль:</string>
    <string name="C_Zavuch_Gender">Пол:</string>
    <string name="C_Zavuch_Birth">Дата рождения:</string>
    <string name="C_Zavuch_Age">Возраст:</string>

    <!-- Zavuch Profile Fragment Изменяемые поля -->
    <string name="Zavuch_Name">Смирнова Галина Петровна</string>
    <string name="Role2">Завуч</string>
    <string name="Zavuch_Gender">Женский</string>
    <string name="Zavuch_Birth">14.05.2000</string>
    <string name="Zavuch_Age">24 года</string>

    <!-- Работа с Shared Preferences -->
    <string name="shared_pref">com.schooldiary.shared_preferences</string>
    <string name="sp_login_state">HAS_LOGIN_SUCCESS</string>
    <string name="sp_class_id">CLASS_ID</string>
    <string name="sp_user_id">USER_ID</string>
    <string name="sp_user_role">USER_ROLE</string>

    <string name="move_to_details">Дневник</string>
    <string name="tab_subjects_marks">Табель успеваемости</string>
    <string name="tab_common_marks">Итоговые оценки</string>

    <string name="AccList">Аккаунты</string>


    <string name="journal">Журнал</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
