<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C6FB9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.ZavuchStatisticFragment">

    <View
        android:id="@+id/BackgroundBloc"
        android:layout_width="0dp"
        android:layout_height="640dp"
        android:background="@drawable/primary_bloc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/Accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Account"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/BackgroundBloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/search_name"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/spinner_background"
        android:inputType="text"
        android:hint="Введите ФИО"
        android:paddingStart="4dp"
        app:layout_constraintEnd_toEndOf="@+id/BackgroundBloc"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/BackgroundBloc"
        app:layout_constraintTop_toTopOf="@+id/BackgroundBloc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_container1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_name">

        <View
            android:id="@+id/whiteBloc1"
            android:layout_width="365dp"
            android:layout_height="75dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/typing_bloc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/whiteBloc1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/whiteBloc1"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/Role1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Teacher_Statistic"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/whiteBloc1"
            app:layout_constraintStart_toStartOf="@+id/whiteBloc1" />

        <TextView
            android:id="@+id/Name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Name_Statistic1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/whiteBloc1"
            app:layout_constraintTop_toTopOf="@+id/whiteBloc1" />

        <TextView
            android:id="@+id/claas1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Class_Statistic1"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/whiteBloc1"
            app:layout_constraintEnd_toEndOf="@+id/whiteBloc1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_container2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_name">

        <View
            android:id="@+id/LessonBloc"
            android:layout_width="365dp"
            android:layout_height="75dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/typing_bloc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/LessonBloc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/LessonBloc"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/Role2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Student_Statistic"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/LessonBloc"
            app:layout_constraintStart_toStartOf="@+id/LessonBloc" />

        <TextView
            android:id="@+id/Name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Name_Statistic2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/LessonBloc"
            app:layout_constraintTop_toTopOf="@+id/LessonBloc" />

        <TextView
            android:id="@+id/claas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Class_Statistic2"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/LessonBloc"
            app:layout_constraintEnd_toEndOf="@+id/LessonBloc" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>